Re-add docker-compose up command

--- a/packages/twenty-docker/Makefile
+++ b/packages/twenty-docker/Makefile
@@ -2,6 +2,9 @@ dev-build:
 	@docker compose -f dev/docker-compose.yml down -v
 	@docker compose -f dev/docker-compose.yml build
 
+dev-up:
+	@docker compose -f dev/docker-compose.yml up -d
+
 dev-start:
 	@docker compose -f dev/docker-compose.yml start
 
