--- a/packages/twenty-server/.env.example
+++ b/packages/twenty-server/.env.example
@@ -34,13 +34,18 @@ SIGN_IN_PREFILLED=true
 # LOGGER_DRIVER=console
 # EXCEPTION_HANDLER_DRIVER=sentry
 # SENTRY_DSN=https://xxx@xxx.ingest.sentry.io/xxx
-# LOG_LEVEL=error,warn
+# LOG_LEVELS=error,warn
 # MESSAGE_QUEUE_TYPE=pg-boss
 # REDIS_HOST=127.0.0.1
 # REDIS_PORT=6379
 # DEMO_WORKSPACE_IDS=REPLACE_ME_WITH_A_RANDOM_UUID
 # SERVER_URL=http://localhost:3000
+# WORKSPACE_INACTIVE_DAYS_BEFORE_NOTIFICATION=30
+# WORKSPACE_INACTIVE_DAYS_BEFORE_DELETION=60
 # Email Server Settings, see this doc for more info: https://docs.twenty.com/start/self-hosting/environment-variables
+# EMAIL_FROM_ADDRESS=noreply@yourdomain.com
+# EMAIL_SYSTEM_ADDRESS=system@yourdomain.com
+# EMAIL_FROM_NAME='John from YourDomain'
 # EMAIL_DRIVER=logger
 # EMAIL_SMTP_HOST=
 # EMAIL_SMTP_PORT=
