--- a/packages/twenty-server/package.json
+++ b/packages/twenty-server/package.json
@@ -37,7 +37,8 @@
     "@graphql-yoga/nestjs": "patch:@graphql-yoga/nestjs@2.1.0#./patches/@graphql-yoga+nestjs+2.1.0.patch",
     "@nestjs/graphql": "patch:@nestjs/graphql@12.0.8#./patches/@nestjs+graphql+12.0.8.patch",
     "@ptc-org/nestjs-query-graphql": "patch:@ptc-org/nestjs-query-graphql@4.2.0#./patches/@ptc-org+nestjs-query-graphql+4.2.0.patch",
-    "class-validator": "patch:class-validator@^0.14.0#./patches/class-validator+0.14.0.patch"
+    "class-validator": "patch:class-validator@^0.14.0#./patches/class-validator+0.14.0.patch",
+    "twenty-emails": "workspace:*"
   },
   "engines": {
     "node": "^18.17.1",
