Fix build server

--- a/packages/twenty-docker/prod/twenty-server/Dockerfile
+++ b/packages/twenty-docker/prod/twenty-server/Dockerfile
@@ -8,6 +8,7 @@ COPY ./.yarnrc.yml .
 COPY ./.yarn/releases /app/.yarn/releases
 COPY ./tools/eslint-rules /app/tools/eslint-rules
 COPY ./packages/twenty-server /app/packages/twenty-server
+COPY ./packages/twenty-emails /app/packages/twenty-emails
 
 WORKDIR /app/packages/twenty-server
 RUN yarn workspaces focus
