--- a/packages/twenty-emails/package.json
+++ b/packages/twenty-emails/package.json
@@ -10,6 +10,12 @@
     "nx": "NX_DEFAULT_PROJECT=twenty-emails node ../../node_modules/nx/bin/nx.js",
     "build": "tsup"
   },
+  "devDependencies": {
+    "@react-email/components": "0.0.12",
+    "@types/react": "^18.2.39",
+    "tsup": "^8.0.1",
+    "typescript": "^5.3.3"
+  },
   "engines": {
     "node": "^18.17.1",
     "npm": "please-use-yarn",
