Fix twenty-emails build (#3608)

--- a/packages/twenty-server/package.json
+++ b/packages/twenty-server/package.json
@@ -9,10 +9,11 @@
     "nx": "NX_DEFAULT_PROJECT=twenty-server node ../../node_modules/nx/bin/nx.js",
     "prebuild": "rimraf dist",
     "build": "yarn prebuild && nest build",
+    "build-twenty-emails": "yarn nx run twenty-emails:build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "set NODE_ENV=development && nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
+    "start": "set NODE_ENV=development && yarn build-twenty-emails && nest start",
+    "start:dev": "yarn build-twenty-emails && nest start --watch",
+    "start:debug": "yarn build-twenty-emails && nest start --debug --watch",
     "start:prod": "node dist/src/main",
     "lint": "eslint \"src/**/*.ts\" --fix",
     "test": "jest",
