3571 remove reply quotations from emails (#3630)
* lib is working

* update

* plural

--- a/packages/twenty-server/package.json
+++ b/packages/twenty-server/package.json
@@ -92,6 +92,7 @@
     "passport-local": "^1.0.0",
     "pg": "^8.11.3",
     "pg-boss": "^9.0.3",
+    "planer": "^1.2.0",
     "react": "^18.2.0",
     "rimraf": "^3.0.2",
     "sharp": "^0.32.1",
