--- a/package.json
+++ b/package.json
@@ -155,6 +155,8 @@
     "zod": "^3.22.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.5",
+    "@babel/preset-react": "^7.14.5",
     "@docusaurus/module-type-aliases": "^3.0.0",
     "@docusaurus/tsconfig": "3.0.0",
     "@graphql-codegen/cli": "^3.3.1",
@@ -168,7 +170,9 @@
     "@nx/eslint": "17.2.7",
     "@nx/eslint-plugin": "17.2.7",
     "@nx/jest": "17.2.7",
-    "@nx/js": "17.2.7",
+    "@nx/js": "17.2.8",
+    "@nx/react": "^17.2.8",
+    "@nx/vite": "17.2.8",
     "@storybook/addon-actions": "^7.6.3",
     "@storybook/addon-coverage": "^1.0.0",
     "@storybook/addon-essentials": "^7.6.7",
@@ -185,7 +189,7 @@
     "@swc-node/register": "~1.6.7",
     "@swc/core": "~1.3.100",
     "@testing-library/jest-dom": "^6.1.5",
-    "@testing-library/react": "^13.4.0",
+    "@testing-library/react": "14.0.0",
     "@types/apollo-upload-client": "^17.0.2",
     "@types/bcrypt": "^5.0.0",
     "@types/better-sqlite3": "^7.6.8",
@@ -241,6 +245,7 @@
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
     "jest-fetch-mock": "^3.0.3",
+    "jsdom": "~22.1.0",
     "msw": "^2.0.11",
     "msw-storybook-addon": "2.0.0--canary.122.b3ed3b1.0",
     "nx": "^17.2.8",
@@ -259,6 +264,7 @@
     "typescript": "^5.3.3",
     "vite": "^5.0.0",
     "vite-plugin-checker": "^0.6.2",
+    "vite-plugin-dts": "~2.3.0",
     "vite-plugin-svgr": "^4.2.0"
   },
   "engines": {
