--- a/packages/twenty-emails/package.json
+++ b/packages/twenty-emails/package.json
@@ -8,18 +8,32 @@
   "main": "./dist/index.js",
   "scripts": {
     "nx": "NX_DEFAULT_PROJECT=twenty-emails node ../../node_modules/nx/bin/nx.js",
-    "build": "tsup"
+    "build": "vite build",
+    "lint": "eslint"
+  },
+  "exports": {
+    ".": {
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.js"
+    }
   },
   "devDependencies": {
+    "@nx/vite": "17.2.8",
+    "@vitejs/plugin-react-swc": "^3.5.0",
+    "vite": "^5.0.0",
+    "vite-plugin-dts": "~2.3.0",
+    "vite-tsconfig-paths": "^4.2.1"
+  },
+  "dependencies": {
     "@react-email/components": "0.0.12",
-    "@types/react": "^18.2.39",
-    "date-fns": "^2.30.0",
-    "tsup": "^8.0.1",
-    "typescript": "^5.3.3"
+    "date-fns": "^2.30.0"
   },
   "engines": {
     "node": "^18.17.1",
     "npm": "please-use-yarn",
     "yarn": "^4.0.2"
+  },
+  "nx": {
+    "projectType": "library"
   }
 }
