--- a/packages/twenty-emails/tsconfig.json
+++ b/packages/twenty-emails/tsconfig.json
@@ -1,7 +1,19 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
-    "baseUrl": "./",
-    "jsx": "react-jsx"
-  }
+    "jsx": "react-jsx",
+    "allowJs": false,
+    "esModuleInterop": false,
+    "allowSyntheticDefaultImports": true,
+    "strict": true,
+    "types": ["vite/client"],
+    "baseUrl": "."
+  },
+  "files": [],
+  "include": [],
+  "references": [
+    {
+      "path": "./tsconfig.lib.json"
+    }
+  ],
+  "extends": "../../tsconfig.base.json"
 }
