--- a/packages/twenty-front/tsconfig.spec.json
+++ b/packages/twenty-front/tsconfig.spec.json
@@ -5,6 +5,7 @@
     "types": ["jest", "node"]
   },
   "include": [
+    "vite.config.ts",
     "jest.config.ts",
     "**/*.test.ts",
     "**/*.test.tsx",
