--- a/packages/twenty-zapier/package.json
+++ b/packages/twenty-zapier/package.json
@@ -27,6 +27,8 @@
     "zapier-platform-core": "15.5.1"
   },
   "devDependencies": {
+    "jest": "29.7.0",
+    "rimraf": "^3.0.2",
     "zapier-platform-cli": "^15.4.1"
   },
   "installConfig": {
