--- a/packages/twenty-server/package.json
+++ b/packages/twenty-server/package.json
@@ -57,8 +57,9 @@
     "@ptc-org/nestjs-query-typeorm": "4.2.1-alpha.2",
     "@react-email/components": "0.0.12",
     "@react-email/render": "0.0.10",
-    "@sentry/node": "^7.66.0",
+    "@sentry/node": "^7.98.0",
     "@sentry/profiling-node": "^1.3.4",
+    "@sentry/tracing": "^7.98.0",
     "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
     "bullmq": "^4.14.0",
