--- a/packages/twenty-server/.env.example
+++ b/packages/twenty-server/.env.example
@@ -52,3 +52,5 @@ SIGN_IN_PREFILLED=true
 # EMAIL_SMTP_USER=
 # EMAIL_SMTP_PASSWORD=
 # PASSWORD_RESET_TOKEN_EXPIRES_IN=5m
+# API_RATE_LIMITING_TTL=
+# API_RATE_LIMITING_LIMIT=
