Fix twenty-server build

--- a/packages/twenty-server/package.json
+++ b/packages/twenty-server/package.json
@@ -44,6 +44,7 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.2",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/event-emitter": "^2.0.3",
     "@nestjs/graphql": "patch:@nestjs/graphql@12.0.8#./patches/@nestjs+graphql+12.0.8.patch",
     "@nestjs/jwt": "^10.0.3",
     "@nestjs/passport": "^9.0.3",
