--- a/packages/twenty-server/.env.example
+++ b/packages/twenty-server/.env.example
@@ -32,6 +32,7 @@ SIGN_IN_PREFILLED=true
 # SUPPORT_FRONT_HMAC_KEY=replace_me_with_front_chat_verification_secret
 # SUPPORT_FRONT_CHAT_ID=replace_me_with_front_chat_id
 # LOGGER_DRIVER=console
+# LOGGER_IS_BUFFER_ENABLED=true
 # EXCEPTION_HANDLER_DRIVER=sentry
 # SENTRY_DSN=https://xxx@xxx.ingest.sentry.io/xxx
 # LOG_LEVELS=error,warn
