--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@docusaurus/preset-classic": "^3.1.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@envelop/on-resolve": "^4.1.0",
     "@floating-ui/react": "^0.24.3",
     "@google-cloud/local-auth": "2.1.0",
     "@graphiql/plugin-explorer": "^1.0.2",
@@ -24,9 +25,11 @@
     "@mdx-js/react": "^3.0.0",
     "@nestjs/apollo": "^11.0.5",
     "@nestjs/axios": "^3.0.1",
+    "@nestjs/cli": "^9.0.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.2",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/event-emitter": "^2.0.3",
     "@nestjs/jwt": "^10.0.3",
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
@@ -41,10 +44,10 @@
     "@ptc-org/nestjs-query-typeorm": "4.2.1-alpha.2",
     "@react-email/components": "0.0.12",
     "@react-email/render": "0.0.10",
-    "@sentry/node": "^7.66.0",
+    "@sentry/node": "^7.99.0",
     "@sentry/profiling-node": "^1.3.4",
     "@sentry/react": "^7.88.0",
-    "@sentry/tracing": "^7.66.0",
+    "@sentry/tracing": "^7.99.0",
     "@sniptt/guards": "^0.2.0",
     "@stoplight/elements": "^7.16.2",
     "@swc/jest": "^0.2.29",
@@ -78,8 +81,10 @@
     "framer-motion": "^10.12.17",
     "googleapis": "105",
     "graphiql": "^3.0.10",
-    "graphql": "^16.8.1",
+    "graphql": "16.8.0",
     "graphql-fields": "^2.0.3",
+    "graphql-middleware": "^6.1.35",
+    "graphql-rate-limit": "^3.3.0",
     "graphql-subscriptions": "2.0.0",
     "graphql-tag": "^2.12.6",
     "graphql-type-json": "^0.3.2",
@@ -100,6 +105,7 @@
     "lodash.isobject": "^3.0.2",
     "lodash.kebabcase": "^4.1.1",
     "lodash.merge": "^4.6.2",
+    "lodash.omit": "^4.5.0",
     "lodash.snakecase": "^4.1.1",
     "lodash.upperfirst": "^4.3.1",
     "luxon": "^3.3.0",
@@ -110,13 +116,14 @@
     "next-mdx-remote": "^4.4.1",
     "nodemailer": "^6.9.8",
     "openapi-types": "^12.1.3",
-    "passport": "^0.6.0",
+    "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "patch-package": "^8.0.0",
     "pg": "^8.11.3",
     "pg-boss": "^9.0.3",
+    "planer": "^1.2.0",
     "prettier": "^3.0.3",
     "prism-react-renderer": "^2.1.0",
     "qs": "^6.11.2",
@@ -149,7 +156,7 @@
     "ts-key-enum": "^2.0.12",
     "tslib": "^2.3.0",
     "tsup": "^8.0.1",
-    "type-fest": "^4.1.0",
+    "type-fest": "4.10.1",
     "typeorm": "^0.3.17",
     "use-debounce": "^10.0.0",
     "uuid": "^9.0.0",
@@ -170,11 +177,11 @@
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
-    "@nx/eslint": "17.2.7",
-    "@nx/eslint-plugin": "17.2.7",
-    "@nx/jest": "17.2.7",
+    "@nx/eslint": "17.2.8",
+    "@nx/eslint-plugin": "17.2.8",
+    "@nx/jest": "17.2.8",
     "@nx/js": "17.2.8",
-    "@nx/react": "^17.2.8",
+    "@nx/react": "17.2.8",
     "@nx/vite": "17.2.8",
     "@storybook/addon-actions": "^7.6.3",
     "@storybook/addon-coverage": "^1.0.0",
@@ -251,7 +258,7 @@
     "jsdom": "~22.1.0",
     "msw": "^2.0.11",
     "msw-storybook-addon": "2.0.0--canary.122.b3ed3b1.0",
-    "nx": "^17.2.8",
+    "nx": "17.2.8",
     "playwright": "^1.40.1",
     "prettier": "^3.1.1",
     "raw-loader": "^4.0.2",
@@ -279,7 +286,8 @@
   "name": "twenty",
   "packageManager": "yarn@4.0.2",
   "resolutions": {
-    "graphql": "16.8.0"
+    "graphql": "16.8.0",
+    "type-fest": "4.10.1"
   },
   "version": "0.2.1",
   "scripts": {
