--- a/packages/twenty-server/package.json
+++ b/packages/twenty-server/package.json
@@ -50,6 +50,7 @@
     "@types/lodash.snakecase": "^4.1.7",
     "@types/lodash.upperfirst": "^4.3.7",
     "@types/react": "^18.2.39",
+    "rimraf": "^5.0.5",
     "typescript": "^5.3.3"
   },
   "engines": {
