Add proper ORM and postgres support (#3978)
* Add postgresql support

* Fixes

* Fix perfs

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@hello-pangea/dnd": "^16.2.0",
     "@hookform/resolvers": "^3.1.1",
     "@jsdevtools/rehype-toc": "^3.0.2",
+    "@libsql/client": "^0.4.3",
     "@mdx-js/react": "^3.0.0",
     "@nestjs/apollo": "^11.0.5",
     "@nestjs/axios": "^3.0.1",
@@ -76,6 +77,7 @@
     "deep-equal": "^2.2.2",
     "docusaurus-node-polyfills": "^1.0.0",
     "dotenv-cli": "^7.2.1",
+    "drizzle-orm": "^0.29.3",
     "esbuild-plugin-svgr": "^2.1.0",
     "file-type": "16.5.4",
     "framer-motion": "^10.12.17",
@@ -238,6 +240,7 @@
     "cross-var": "^1.1.0",
     "danger": "^11.3.0",
     "dotenv-cli": "^7.2.1",
+    "drizzle-kit": "^0.20.14",
     "eslint": "^8.53.0",
     "eslint-config-next": "14.0.4",
     "eslint-config-prettier": "^9.1.0",
