Fix website build (#3983)

--- a/packages/twenty-docker/Makefile
+++ b/packages/twenty-docker/Makefile
@@ -48,7 +48,7 @@ prod-postgres-run:
 	@docker run -d -p 5432:5432 -e POSTGRES_USER=postgres -e POSTGRES_PASSWORD=postgres --name twenty-postgres twenty-postgres
 
 prod-website-build:
-	@cd ../.. && docker build -f ./packages/twenty-docker/prod/twenty-website/Dockerfile --build-arg GITHUB_TOKEN=REPLACE_ME --tag twenty-website . && cd -
+	@cd ../.. && docker build -f ./packages/twenty-docker/prod/twenty-website/Dockerfile --tag twenty-website . && cd -
 
 prod-website-run:
 	@docker run -d -p 3000:3000 --name twenty-website twenty-website
