--- a/packages/twenty-docker/prod/twenty-website/Dockerfile
+++ b/packages/twenty-docker/prod/twenty-website/Dockerfile
@@ -1,21 +1,19 @@
 FROM node:18.17.1-alpine as twenty-website-build
 
-ARG GITHUB_TOKEN
-ARG BASE_URL
-
-ENV GITHUB_TOKEN=$GITHUB_TOKEN
-ENV BASE_URL=$BASE_URL
 
 WORKDIR /app
 
 COPY ./package.json .
 COPY ./.eslintrc.js .
+COPY ./.prettierrc .
 COPY ./yarn.lock .
 COPY ./.yarnrc.yml .
 COPY ./.yarn/releases /app/.yarn/releases
-COPY ./packages/twenty-website /app/packages/twenty-website
+COPY ./packages/twenty-website/package.json /app/packages/twenty-website/package.json
 
 RUN yarn
+
+COPY ./packages/twenty-website /app/packages/twenty-website
 RUN yarn nx build twenty-website
 
 FROM node:18.17.1-alpine as twenty-website
