Fix website build (#3986)
* Fix website build

* Try fix

* Try fix

--- a/packages/twenty-docker/prod/twenty-website/Dockerfile
+++ b/packages/twenty-docker/prod/twenty-website/Dockerfile
@@ -22,7 +22,9 @@ WORKDIR /app/packages/twenty-website
 
 COPY --from=twenty-website-build /app /app
 
+WORKDIR /app/packages/twenty-website
+
 LABEL org.opencontainers.image.source=https://github.com/twentyhq/twenty
 LABEL org.opencontainers.image.description="This image provides a consistent and reproducible environment for the website."
 
-CMD ["/bin/sh", "-c", "yarn nx start twenty-website"]
+CMD ["/bin/sh", "-c", "yarn nx start"]
