fix: impact too many records (#3993)
* fix: impact too many records

* fix: change env name

* fix: remove env name from error

--- a/packages/twenty-server/.env.test
+++ b/packages/twenty-server/.env.test
@@ -21,3 +21,4 @@ REFRESH_TOKEN_SECRET=secret_refresh_token
 # MESSAGING_PROVIDER_GMAIL_ENABLED=false
 # STORAGE_TYPE=local
 # STORAGE_LOCAL_PATH=.local-storage
+# MUTATION_MAXIMUM_RECORD_AFFECTED=100
