--- a/packages/twenty-server/.env.example
+++ b/packages/twenty-server/.env.example
@@ -55,3 +55,4 @@ SIGN_IN_PREFILLED=true
 # PASSWORD_RESET_TOKEN_EXPIRES_IN=5m
 # API_RATE_LIMITING_TTL=
 # API_RATE_LIMITING_LIMIT=
+# MUTATION_MAXIMUM_RECORD_AFFECTED=100
