fix: added working `launch.json` for VSCode (#4037)
* fix: added working launch json for VScode

* fix: removed unused env

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,21 +1,21 @@
 {
+  "version": "0.2.0",
+  "resolveSourceMapLocations": ["${workspaceFolder}/**", "!**/node_modules/**"],
   "configurations": [
     {
+      "name": "twenty-server - dev debug",
       "type": "node",
       "request": "launch",
-      "name": "Server Debug",
       "runtimeExecutable": "yarn",
-      "cwd": "${workspaceFolder}/server",
       "runtimeArgs": [
-        "start:debug",
-        "--",
-        "--inspect-brk"
+        "nx",
+        "run",
+        "twenty-server:start:dev",
       ],
-      "console": "integratedTerminal",
-      "restart": true,
-      "protocol": "auto",
-      "port": 9229,
-      "autoAttachChildProcesses": true
+      "outputCapture": "std",
+      "internalConsoleOptions": "openOnSessionStart",
+      "console": "internalConsole",
+      "cwd": "${workspaceFolder}/packages/twenty-server/"
     }
   ]
 }
