--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "danger-plugin-todos": "^1.3.1",
     "dataloader": "^2.2.2",
     "date-fns": "^2.30.0",
+    "date-fns-tz": "^2.0.0",
     "debounce": "^2.0.0",
     "deep-equal": "^2.2.2",
     "docusaurus-node-polyfills": "^1.0.0",
