MQ Facepaint introduced (#4169)
* MQ Facepaint introduced

* Remove useDeviceType

---------

Co-authored-by: Félix Malfait <felix.malfait@gmail.com>

--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@stoplight/elements": "^8.0.5",
     "@swc/jest": "^0.2.29",
     "@tabler/icons-react": "^2.44.0",
+    "@types/facepaint": "^1.2.5",
     "@types/lodash.camelcase": "^4.3.7",
     "@types/lodash.merge": "^4.6.7",
     "@types/mailparser": "^3.4.4",
@@ -80,6 +81,7 @@
     "dotenv-cli": "^7.2.1",
     "drizzle-orm": "^0.29.3",
     "esbuild-plugin-svgr": "^2.1.0",
+    "facepaint": "^1.2.1",
     "file-type": "16.5.4",
     "framer-motion": "^10.12.17",
     "googleapis": "105",
