--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "jest-mock-extended": "^3.0.4",
     "js-cookie": "^3.0.5",
     "js-levenshtein": "^1.1.6",
+    "json-2-csv": "^5.4.0",
     "jsonwebtoken": "^9.0.0",
     "libphonenumber-js": "^1.10.26",
     "lodash.camelcase": "^4.3.0",
