refactor: use react-hook-form in Settings Data Model Object pages (#4271)
Related issue: #3836

--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@types/facepaint": "^1.2.5",
     "@types/lodash.camelcase": "^4.3.7",
     "@types/lodash.merge": "^4.6.7",
+    "@types/lodash.pick": "^4.3.7",
     "@types/mailparser": "^3.4.4",
     "@types/nodemailer": "^6.4.14",
     "add": "^2.0.6",
@@ -112,6 +113,7 @@
     "lodash.kebabcase": "^4.1.1",
     "lodash.merge": "^4.6.2",
     "lodash.omit": "^4.5.0",
+    "lodash.pick": "^4.4.0",
     "lodash.snakecase": "^4.1.1",
     "lodash.upperfirst": "^4.3.1",
     "luxon": "^3.3.0",
