Add a concise test report with just the errors (#4220)
* Add a concise test report with just the errors

Co-authored-by: KlingerMatheus <klinger.matheus@gitstart.dev>

* Refactor according to review

Co-authored-by: v1b3m <vibenjamin6@gmail.com>
Co-authored-by: KlingerMatheus <klinger.matheus@gitstart.dev>

* Add a concise test report

Co-authored-by: v1b3m <vibenjamin6@gmail.com>
Co-authored-by: KlingerMatheus <klinger.matheus@gitstart.dev>

---------

Co-authored-by: gitstart-twenty <gitstart-twenty@users.noreply.github.com>
Co-authored-by: KlingerMatheus <klinger.matheus@gitstart.dev>
Co-authored-by: v1b3m <vibenjamin6@gmail.com>

--- a/packages/twenty-front/package.json
+++ b/packages/twenty-front/package.json
@@ -18,7 +18,7 @@
     "fmt:fix": "prettier --cache --write \"src/**/*.ts\" \"src/**/*.tsx\"",
     "fmt": "prettier --check \"src/**/*.ts\" \"src/**/*.tsx\"",
     "test": "jest",
-    "test-watch": "jest --coverage=false --watch",
+    "test-watch": "jest --watch",
     "tsup": "tsup",
     "coverage": "jest --coverage",
     "storybook:modules:dev": "STORYBOOK_SCOPE=modules yarn storybook:dev",
