Improve performance on findMany queries (#4334)
* Improve performance on findMany queries

* Fix

--- a/packages/twenty-front/tsconfig.app.json
+++ b/packages/twenty-front/tsconfig.app.json
@@ -9,7 +9,8 @@
     "**/*.spec.tsx",
     "**/*.test.tsx",
     "jest.config.ts",
-    "tsup.config.ts"
+    "tsup.config.ts",
+    "tsup.ui.index.tsx"
   ],
-  "include": ["**/*.js", "**/*.jsx", "**/*.ts", "**/*.tsx"]
+  "include": ["src/**/*.js", "src/**/*.jsx", "src/**/*.ts", "src/**/*.tsx"]
 }
